Error Bars Image in.

--- a/Interim-Report/bibliography.bib
+++ b/Interim-Report/bibliography.bib
@@ -118,3 +118,11 @@
     year        = "2014",
     address     = "http://www.vismd.de/lib/exe/fetch.php?media=files:labelling:oeltze\_2014\_vcbm.pdf"
 }
+
+@TECHREPORT {uncertaintyoverview,
+    author      = "Ken Brodlie and Rodolfo Allendes Osorio and Adriano Lopes",
+    title       = "A Review of Uncertainty in Data Visualization",
+    institution = "University of Leeds and University of Talca and Universidade Nova de Lisboa",
+    year        = "2012",
+    address     = "http://www.comp.leeds.ac.uk/kwb/publication\_repository/2012/uncert.pdf"
+}
