Images in visualisation section.

--- a/Interim-Report/bibliography.bib
+++ b/Interim-Report/bibliography.bib
@@ -126,3 +126,10 @@
     year        = "2012",
     address     = "http://www.comp.leeds.ac.uk/kwb/publication\_repository/2012/uncert.pdf"
 }
+
+@MISC {heatmap,
+    author       = "The Walking Bostonian",
+    title        = "MBTA service heat map",
+    howpublished = "http://walkingbostonian.blogspot.co.uk/2012/02/mbta-service-heat-map.html",
+    note         = "{Last Accessed: 30/01/15}"
+}
