More images in. Time for read through, then work on parts until 12.

--- a/Interim-Report/bibliography.bib
+++ b/Interim-Report/bibliography.bib
@@ -133,3 +133,17 @@
     howpublished = "http://walkingbostonian.blogspot.co.uk/2012/02/mbta-service-heat-map.html",
     note         = "{Last Accessed: 30/01/15}"
 }
+
+@MISC {ransac:image,
+    author       = "Msm",
+    title        = "Fitted line",
+    howpublished = "http://commons.wikimedia.org/wiki/File:Fitted\_line.svg",
+    note         = "{Last Accessed: 30/01/15}"
+}
+
+@MISC {marching_squares:image,
+    author       = "Ben Anderson",
+    title        = "An Implementation of the Marching Cubes[1] Algorithm",
+    howpublished = "http://www.cs.carleton.edu/cs\_comps/0405/shape/marching\_cubes.html",
+    note         = "{Last Accessed: 30/01/15}"
+}
