Stuff going down. Plan done.

--- a/Interim-Report/bibliography.bib
+++ b/Interim-Report/bibliography.bib
@@ -147,3 +147,10 @@
     howpublished = "http://www.cs.carleton.edu/cs\_comps/0405/shape/marching\_cubes.html",
     note         = "{Last Accessed: 30/01/15}"
 }
+
+@MISC {niftivtk,
+    author       = "fbeeper",
+    title        = "Load volumetric NIFTI data into VTK using ITK",
+    howpublished = "https://github.com/fbeeper/nifti-vtk",
+    note         = "{Last Accessed: 30/01/15}"
+}
