Revised title page. Added logo. Rough still.

--- a/Final-Report/main.tex
+++ b/Final-Report/main.tex
@@ -37,12 +37,9 @@
 %\renewcommand{\ttdefault}{pcr}
 %\newcommand\customfont[1]{{\usefont{T1}{custom}{m}{n} #1 }}
 
-\title{Visualising uncertainty in super resolution fetal MRI images.}
-\author{by\\Sam Esgate\\\\supervised by\\Dr. Bernhard Kainz}
-
 \begin{document}
 
-\maketitle
+\input{title.tex}
 
 \include{abstract}
 
