--- a/Final-Report/title.tex
+++ b/Final-Report/title.tex
@@ -1,6 +1,16 @@
 \begin{titlepage}
 
-\newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % Defines a new command for the horizontal lines, change thickness here
+\newcommand{\HRule}{\rule{\linewidth}{0.3mm}} % Defines a new command for the horizontal lines, change thickness here
+
+%----------------------------------------------------------------------------------------
+%	LOGO SECTION
+%----------------------------------------------------------------------------------------
+
+\begin{figure}
+  \begin{flushleft}% or better \raggedleft see comments below
+	\includegraphics[height=1.5cm]{logo.eps}\\[2cm] % Include a department/university logo - this will require the graphicx package
+  \end{flushleft}
+\end{figure}
 
 \center % Center everything on the page
  
@@ -8,16 +18,16 @@
 %	HEADING SECTIONS
 %----------------------------------------------------------------------------------------
 
-\textsc{\LARGE Imperial College London}\\[0.5cm] % Name of your university/college
+% \textsc{\LARGE Imperial College London}\\[0.5cm] % Name of your university/college
 \textsc{\Large Department of Computing}\\[0.5cm] % Major heading such as course name
-\textsc{\large Minor Heading}\\[0.5cm] % Minor heading such as course title
+% \textsc{\large Minor Heading}\\[0.5cm] % Minor heading such as course title
 
 %----------------------------------------------------------------------------------------
 %	TITLE SECTION
 %----------------------------------------------------------------------------------------
 
 \HRule \\[0.4cm]
-{ \huge \bfseries Visualizing uncertainty in super resolution fetal MRI images.}\\[0.4cm] % Title of your document
+{ \LARGE \bfseries Visualizing uncertainty in super-resolution fetal MRI.}\\[0cm] % Title of your document
 \HRule \\[1.5cm]
  
 %----------------------------------------------------------------------------------------
@@ -27,16 +37,16 @@
 \begin{minipage}{0.4\textwidth}
 \begin{flushleft} \large
 \emph{Author:}\\
-Sam \textsc{Esgate} % Your name
+Sam Esgate % Your name
 \end{flushleft}
 \end{minipage}
 ~
 \begin{minipage}{0.4\textwidth}
 \begin{flushright} \large
 \emph{Supervisor:} \\
-Dr. Bernhard \textsc{Kainz} % Supervisor's Name
+Dr. Bernhard Kainz % Supervisor's Name
 \end{flushright}
-\end{minipage}\\[4cm]
+\end{minipage}\\[7cm]
 
 % If you don't want a supervisor, uncomment the two lines below and remove the section above
 %\Large \emph{Author:}\\
@@ -47,12 +57,6 @@ Dr. Bernhard \textsc{Kainz} % Supervisor's Name
 %----------------------------------------------------------------------------------------
 
 {\large \today}\\[3cm] % Date, change the \today to a set date if you want to be precise
-
-%----------------------------------------------------------------------------------------
-%	LOGO SECTION
-%----------------------------------------------------------------------------------------
-
-\includegraphics{logo.eps}\\[1cm] % Include a department/university logo - this will require the graphicx package
  
 %----------------------------------------------------------------------------------------
 
