Work done on introduction.

--- a/Final-Report/acknowledgements.tex
+++ b/Final-Report/acknowledgements.tex
@@ -1,3 +1,20 @@
+% It is usual to thank those individuals who have provided particularly useful assistance, technical or otherwise, during your project. 
+% Your supervisor will obviously be pleased to be acknowledged as he or she will have invested quite a lot of time overseeing your progress.
 \chapter*{Acknowledgements}
 
-Thank some people...
+Special thanks to \textbf{Bernhard Kainz} whose guidance during this project was invaluable.
+
+Thanks also to everybody who gave their time to help with the evaluation:
+
+\begin{itemize}
+	\item Amir Alansary
+	\item Paul Aljabar
+	\item Joshua van Amerom
+	\item Rose Crowley
+	\item Alice Davidson
+	\item Matt Fox
+	\item Kevin Keraudren
+	\item Maelene Lohezic
+	\item Kerstin Pannek
+	\item Prachi Patkee
+\end{itemize}
