--- a/Final-Report/bibliography.bib
+++ b/Final-Report/bibliography.bib
@@ -154,3 +154,10 @@
     howpublished = "https://github.com/fbeeper/nifti-vtk",
     note         = "{Last Accessed: 30/01/15}"
 }
+
+@TECHREPORT {uncertaintysvd,
+    author      = "Bernhard Kainz and Christina Malamateniou and Giulio Ferrazzi and Maria Murgasova and Jan Egger and Kevin Keraudren and Mary Rutherford and Joseph Hajnal and Daniel Rueckert",
+    title       = "Adaptive scan strategies for fetal MRI imaging using slice to volume techniques",
+    institution = "Imperial College London and Kings College London and University of Technology, Austria",
+    year        = "2015"
+}
