--- a/Final-Report/contents.tex
+++ b/Final-Report/contents.tex
@@ -1,3 +1,8 @@
+% This should list the main chapters and (sub)sections of your report. 
+% Choose self-explanatory chapter and section titles and use double spacing for clarity.
+% If possible you should include page numbers indicating where each chapter/section begins.
+% Try to avoid too many levels of subheading - three is sufficient.
+
 %*******************************************************
 % Table of Contents
 %*******************************************************
