--- a/Final-Report/introduction.tex
+++ b/Final-Report/introduction.tex
@@ -1,9 +1,38 @@
+% This is one of the most important components of the report. 
+% It should begin with a clear statement of what the project is about so that the nature and scope of the project can be understood by a lay reader.
+
+% It should summarise everything you set out to achieve, provide a clear summary of the project's background, relevance and main contributions.
+
+% It should explain the motivation for the project (i.e., why the problem is important) and identify the issues to be addressed (i.e., why the problem is difficult).
+
+% The introduction should set the scene for the project and should provide the reader with a summary of the key things to look out for in the remainder of the report.
+
+% When detailing the contributions it is helpful to provide pointers to the section(s) of the report that provide the relevant technical details.
+
+% The introduction itself should be largely non-technical.
+
+% It is sometimes useful to state the main objectives of the project as part of the introduction.
+
+% However, avoid the temptation to list low-level objectives one after another in the introduction and then later, in the evaluation section (see below), say something like "All the objectives of the project have been met blah blah...".
+
+% A project that meets all its objectives is, by definition, weak and unambitious.
+
+% Concentrate instead on the big issues, e.g. the main questions (scientific or otherwise) that the project sets out to answer.
+
 \chapter{Introduction}
 
-MRI is very suited to imaging the developing fetus due to its impressive contrast and lack of harmful side effects. However, limitations in resolution make imaging what can often be a very small target volume difficult. Super resolution is a technique to mitigate this that constructs a higher resolution image from many lower resolution images. Unfortunately super resolution introduces some uncertainty which may not be obvious from looking at the reconstructed image.
+In many ways MRI is highly suited for creating fetal images; it has impressive contrast and no known harmful side effects. However, limitations in resolution make imaging what can often be very small area difficult. Super resolution reconstruction is a technique designed to mitigate this which constructs a high resolution volume from a number of lower resolution scans.
 
-Each pixel in the reconstructed image is a weighted combination of pixels in the input images. The confidence we have for a reconstructed pixel will vary depending on the amount of information we have for that region in the low resolution images. Crucially when using these images for diagnostic purposes it is important to be aware of the uncertainty in each region.
+The quality of the reconstruction of course depends on the quality of the scans you give it. If for example the fetus moves during the scanning process there will be some areas that will be less well sampled than others which will effect the quality of the reconstruction in that area. It may not be immediately obvious which areas are less well sampled and crucially when using these images for diagnostic purposes it is important to be aware of the uncertainty in each region.
 
-The purpose of this project is to develop visualisations that can help a radiologist understand this uncertainty. A number of different visualisations will be tried and then compared for effectiveness to see what works well and what does not. In addition it should be possible to use the uncertainty information to guide the process of scanning. MRI is an iterative procedure where previous scans are used to decide where next to scan for best effect. Incorporating this uncertainty information at scan time might be able to guide the scanning process to minimize uncertainty and produce better images.
+The main purpose of this project is to develop visualizations that can help researchers and radiographers understand how well a particular reconstruction went and to highlight problem areas. Two different approaches to visualizing the uncertainty will be prototyped: volume rendering (using ray tracing)[section ???] and conventional rasterization [section ???]. These two will then be compared [section ???] to get an idea of what works well and where future efforts should be focused.
+
+As well as visualizing the uncertainty recent research\cite{uncertaintysvd} has shown that it is possible to use the uncertainty to guide the scanning process. The idea is if we can perform the reconstruction in real time and know at the time of scanning where the largest areas of uncertainty are then we can target them in order to improve the quality of the scan. Visualizations of this next scan plane will also be explored.
+
+// Research Tool
+
+// Some objectives that weren't accomplished.
+	- registering generic brain model
+	- 
 
 Hopefully the findings of this project will be able to guide the incorporation of these techniques in clinical use.
